 - TODO : manage when sftp submodule is not available => throw the right exception
 - TODO : add sudo support / with password prompt recognition...
 - TODO : add su support / with password prompt recognition...
 - TODO : SSHShell timeout on current command (send ^C to break current processing and give back the prompt)
 
------------------------------------------------------------------
0.9.9 (2013-05-09)

 - scala 2.10.1
 - scalalogging 1.0.1
 - sbt assembly 0.8.8
 - sbt eclipse 2.1.2
 - removing parenthesis to cd to allow executing "cd" to go back to home directory
 - SSHExec timeout implemented BUT not yet clean
    + SSHTimeoutException class added
 - receiveNcompress method added to TransfertOperations (gz)
 - new dependency : "org.apache.commons" % "commons-compress"
 - SSHOptions - removing second parameter list, host comes back to the first and unik parameter list.
   (Two parameters list for SSHOptions was a bad idea)

------------------------------------------------------------------
0.9.8 (2013-02-22)

 - jsch session is now configured with tcp keep alive of 2s
   (setServerAliveInterval(2000))
 - AIX sha1sum & md5sum fix.
 - new commands :
   + env
   + osid  (with new trait OS and objects AIX, Linux, Darwin, SunOS)
   + rm
   + rmdir
   + mkdir
   + arch
   + kill
 - new test cases 
 - "du" fix for AIX (not supporting -d or --max-depth option)
 - "ps" fix for AIX
 - SSHOptions new option : execWithPty = false (by default)
   tell if exec should use a virtual tty or not
   (Feature : ChannelExec use of virtual tty must be configurable, as without performance are quite better)
 - onejar subproject contains now a simplified launcher
   with default scala options :
   -Yrepl-sync -usejavacp
   -nocompdaemon -savecompiled
   -deprecation 

------------------------------------------------------------------
0.9.7 (2013-02-10)

 - scala >=2.10 is now mandatory
 - ChannelExec now is using a virtual tty by default
 - new commands : 
   + fsFreeSpace